/***********************************************************************
 X3 ChangeLog

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added CANCEL command for cancelling memos
	that you have sent, aslong as they have not been read yet.

	* src/mod-memoserv.help: CANCEL entry plus tweaked some read
	recipient to read reciept stuff.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Redid the db stuff, it now writes users
	settings and memos to the memoserv database.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Small bug fix.

2006-06-20  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Added read recipient support via SEND using
	-r as a flag. Messages with requested read recipients have a (r)
	shown beside the sender nick in LIST. People can ignore a read
	recipient using -i when reading the message via READ. Its all
	in the help file.

	* src/mod-memoserv.help: Added read recipient relevent bits.

	* src/opserv.help: Added halfopping functions.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* src/x3.conf.example: Forgot a ;.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Make use of SET LIMIT.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fixed SET bugs and renabled LIMIT now.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* src/mod-memoserv.c: On Second thoughts dont enable LIMIT now.

2006-06-19  Neil Spierling <sirvulcan@gmail.com>

	* x3.conf.example: Max limit for Memoserv LIMIT option.

	* src/hash.h: Fixed halfops issue.

	* src/mod-memoserv.c: Added SET LIMIT option for the maximum
	amount of memos you can have. This does not do anything yet as
	im committing the half ops fix now. This code is fine it just
	allows you to adjust the limit for now.

2006-06-12  Neil Spierling <sirvulcan@gmail.com>

	* x3.conf.example: Commented out SpamServ module as there are bugs